@@ -1,5 +1,12 @@
 2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/category/WaterfallBarRenderer.java
+    (findRangeBounds): Handle null dataset,
+    * tests/org/jfree/chart/renderer/category/junit/WaterfallBarRendererTests.java
+    (testFindRangeBounds): New tests.
+
+2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/category/StackedAreaRenderer.java
     (findRangeBounds): Check for null dataset,
     (drawItem): Return early if series is not visible,
